# pyvo

./: .gitignore  .gitmodules  .mailmap  .pre-commit-config.yaml  .publish.sh  .readthedocs.yml  .travis.yml  CHANGES.rst  CONTRIBUTORS.rst  LICENSE.rst  MANIFEST.in  README  README.rst  RELEASE.rst  ah_bootstrap.py  conftest.py  coverage.xml  pip-requirements  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: release.yml
.github/workflows/: changelog.yml  ci_devtests.yml  ci_tests.yml  cibuild.yml  publish.yaml  publish.yml
docs/: conf.py  index.rst  nitpick-exceptions  requirements.txt  samp.rst
docs/astropy_samp/: advanced_embed_samp_hub.rst  example_clients.rst  example_hub.rst  example_table_image.rst  index.rst  references.txt
docs/auth/: index.rst
docs/dal/: index.rst
docs/discover/: index.rst
docs/io/: index.rst  uws.rst  vosi.rst
docs/mivot/: annoter.rst  annoter_tips.rst  example.rst  examples.rst  features.rst  index.rst  seekers.rst  utils.rst  viewer.rst  writer.rst
docs/prototypes/: index.rst
docs/pyvo/: dal.rst  data_access.rst  data_discovery.rst  getting_started.rst  index.rst  install.rst  io.rst  ivoareferences.rst  mod.rst  nameresolver.rst  pyvo.dal.scs.SCSQuery.rst  pyvo.dal.scs.SCSRecord.rst  pyvo.dal.scs.SCSResults.rst  pyvo.dal.scs.SCSService.rst  pyvo.dal.sia.SIAQuery.rst  pyvo.dal.sia.SIARecord.rst  pyvo.dal.sia.SIAResults.rst  pyvo.dal.sia.SIAService.rst  pyvo.dal.sla.SLAQuery.rst  pyvo.dal.sla.SLARecord.rst  pyvo.dal.sla.SLAResults.rst  pyvo.dal.sla.SLAService.rst  pyvo.dal.ssa.SSAQuery.rst  pyvo.dal.ssa.SSARecord.rst  pyvo.dal.ssa.SSAResults.rst  pyvo.dal.ssa.SSAService.rst  pyvo.dal.tap.AsyncTAPJob.rst  pyvo.dal.tap.TAPQuery.rst  pyvo.dal.tap.TAPQueryAsync.rst  pyvo.dal.tap.TAPResults.rst  pyvo.dal.tap.TAPService.rst  query.rst  ref.rst  registry.rst  registry_access.rst  resolve_names.rst  scs.rst  sia.rst  sla.rst  ssa.rst  (+3 more)
docs/registry/: index.rst
docs/samp/: advanced_embed_samp_hub.rst  example_clients.rst  example_hub.rst  example_table_image.rst  index.rst  ref_api.rst
docs/utils/: cloud_access.rst  download.rst  index.rst  prototypes.rst  testing.rst
examples/: serialquery.py
examples/auth/: cadc_auth_example.py  cert_auth_example.py  gaia_auth_example.py
examples/images/: ex_casA_image_cat.py  ex_get_cutouts.py
examples/notebooks/: simple_service_discovery.ipynb  working_with_registry_results.ipynb
licenses/: LICENSE.rst
python/pyvo/: __init__.py
python/pyvo/dal/: sla.py
python/pyvo/nameresolver/: sesame.py
python/pyvo/registry/: vao.py
python/vaopy/: __init__.py  vaoregistry.py
python/vaopy/dal/: __init__.py  conesearch.py  dbapi2.py  query.py  scs.py  sia.py  sla.py  ssa.py
python/vaopy/nameresolver/: __init__.py  sesame.py
python/vaopy/registry/: __init__.py  vao.py
pyvo/: __init__.py  _astropy_init.py  conftest.py  samp.py
pyvo/astropy_samp/: __init__.py  client.py  constants.py  errors.py  hub.py  hub_proxy.py  hub_script.py  integrated_client.py  lockfile_helpers.py  setup_package.py  utils.py
pyvo/astropy_samp/tests/: test_client.py  test_errors.py  test_helpers.py  test_hub.py  test_hub_proxy.py  test_hub_script.py  test_standard_profile.py  test_web_profile.py  web_profile_test_helpers.py
pyvo/auth/: __init__.py  authsession.py  authurls.py  credentialstore.py
pyvo/auth/tests/: setup_package.py  test_auth.py
pyvo/dal/: __init__.py  adhoc.py  datalink.py  dbapi2.py  exceptions.py  mimetype.py  mimetypes.py  mixin.py  params.py  query.py  scs.py  sia.py  sia2.py  sla.py  soda.py  ssa.py  tap.py  vosi.py
pyvo/dal/tests/: aTestDALServer.py  aTestSIAServer.py  conftest.py  make_testdata.py  setup_package.py  test_CS.py  test_QueryNoNet.py  test_SIA.py  test_SIANeedsNet.py  test_SLA.py  test_SSA.py  test_TAP.py  test_adhoc.py  test_datalink.py  test_mimetype.py  test_monkeypatch.py  test_params.py  test_query.py  test_scs.py  test_sia.py  test_sia2.py  test_sia2_remote.py  test_sia_net.py  test_sla.py  test_ssa.py  test_tap.py  testserver.py
pyvo/dam/: __init__.py  obscore.py
pyvo/discover/: __init__.py  image.py
pyvo/discover/tests/: test_imagediscovery.py
pyvo/extensions/: authsession.py  authurls.py  cadcauth.py  credstore.py  gaiaauth.py  lsstauth.py
pyvo/extensions/auth/: authurls.py  credentialstore.py  securitymethods.py
pyvo/extensions/tests/: setup_package.py  test_cadcauth.py  test_gaiaauth.py  test_lsstauth.py
pyvo/gws/: __init__.py  vospace.py
pyvo/gws/tests/: test_vospace.py  test_vospace_remote.py
pyvo/io/: uws.py
pyvo/io/tests/: setup_package.py  test_usw.py
pyvo/io/uws/: __init__.py  endpoint.py  tree.py
pyvo/io/vosi/: __init__.py  availability.py  endpoint.py  exceptions.py  tapregext.py  util.py  vodataservice.py  voresource.py
pyvo/mivot/: __init__.py  glossary.py  version_checker.py
pyvo/mivot/features/: epoch_propagation.py  sky_coord_builder.py  static_reference_resolver.py
pyvo/mivot/seekers/: __init__.py  annotation_seeker.py  (+2 more)
pyvo/nameresolver/: __init__.py  sesame.py
pyvo/registry/: __init__.py  datasearch.py  regtap.py  rtcons.py  vao.py
pyvo/samp/: __init__.py  client.py  constants.py  errors.py  hub.py  hub_proxy.py  integrated_client.py  utils.py  vo_helpers.py
pyvo/tests/: setup_package.py
pyvo/tools/: __init__.py  plainxml.py  uws.py  vosi.py
pyvo/utils/: __init__.py  cloud_access.py  compat.py  consts.py  decorators.py  download.py  experimental.py  formatting.py  http.py  protofeature.py  prototype.py  testing.py  url.py  vocabularies.py
scripts/: README.rst  ex_casA_image_cat.py  ex_get_cutouts.py
tests/: README.txt  testLicense.py
tests/dal/: aTestSIAServer.py  error-cs.xml  error-sia.xml  error-ssa.xml  error4-cs.xml  jhu-ssa.xml  nrao-sla.xml  testCS.py  testNeedsNet.py  testNoNet.py  testQueryNoNet.py  testSIA.py  testSIANeedsNet.py  testSLA.py  testSSA.py  twomass-cs.xml
tests/nameresolver/: sesame.xml  testNeedsNet.py  testNoNet.py  testSesameNeedsNet.py  testSesameNoNet.py
tests/registry/: reg-short.xml  testNeedsNet.py  testNoNet.py  testVaoReg.py  testVaoRegNeedsNet.py
(+293 files in other folders)
