[tool:pytest]
minversion = 6.0
norecursedirs = build docs/_build
testpaths = "pyvo" "docs"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst
remote_data_strict = true
filterwarnings =
    error
    ignore:numpy.ndarray size changed:RuntimeWarning
    ignore:unclosed <socket:ResourceWarning
    ignore:unclosed <ssl.SSLSocket:ResourceWarning
# This can be removed once the minimum astropy is 5.0.1?
    ignore:distutils Version classes are deprecated:DeprecationWarning


[flake8]
max-line-length = 110
max-doc-length = 79
exclude = __init__.py, setup_package.py, conf.py, setup.py, version.py, conftest.py

[pycodestyle]
max-line-length = 110
max-doc-length = 79
exclude = extern,sphinx,*parsetab.py

[metadata]
name = pyvo
description = Astropy affiliated package for accessing Virtual Observatory data and services
long_description = file: README.rst
author = the PyVO Developers
license = BSD
license_file = LICENSE.rst
url = https://github.com/astropy/pyvo
edit_on_github = False
github_project = astropy/pyvo

[options]
packages = find:
zip_safe = False
setup_requires = setuptools_scm
install_requires =
    astropy>=4.1
    requests
python_requires = >=3.8

[options.extras_require]
all =
    pillow
test =
    pytest-astropy
    requests-mock
docs =
    sphinx-astropy

[options.package_data]
pyvo.auth.tests = data/tap/*.xml
pyvo.io.uws.tests = data/*.xml
pyvo.io.vosi.tests = data/*.xml, data/tables/*.xml, data/capabilities/*.xml
pyvo.registry.tests = data/*.xml
pyvo.dal.tests = data/*.xml, data/*/*

[coverage:run]
omit =
    pyvo/_astropy_init*
    pyvo/conftest.py
    pyvo/*setup_package*
    pyvo/tests/*
    pyvo/*/tests/*
    pyvo/extern/*
    pyvo/version*
    */pyvo/_astropy_init*
    */pyvo/conftest.py
    */pyvo/*setup_package*
    */pyvo/tests/*
    */pyvo/*/tests/*
    */pyvo/extern/*
    */pyvo/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
